WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213031
ASSERTION FAILED: suspendedState == State::Running in WebKit::WebResourceLoadStatisticsStore::suspend
https://bugs.webkit.org/show_bug.cgi?id=213031
Summary
ASSERTION FAILED: suspendedState == State::Running in WebKit::WebResourceLoad...
Kate Cheney
Reported
2020-06-10 10:13:09 PDT
Debug assert is being hit in WebResourceLoadStatisticsStore::suspend().
Attachments
Patch
(2.73 KB, patch)
2020-06-10 10:25 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2020-06-10 10:13:27 PDT
<
rdar://problem/64131092
>
Kate Cheney
Comment 2
2020-06-10 10:25:12 PDT
Created
attachment 401552
[details]
Patch
Kate Cheney
Comment 3
2020-06-10 10:31:16 PDT
***
Bug 212912
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2020-06-10 12:05:01 PDT
Committed
r262846
: <
https://trac.webkit.org/changeset/262846
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401552
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug